--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         }
         .control-btn {
             position: absolute;
-            width: 90px;
-            height: 90px;
+            width: 70px;
+            height: 70px;
             background: #ff6b6b;
-            border: 6px solid #4a4a4a;
-            border-radius: 16px;
+            border: 4px solid #4a4a4a;
+            border-radius: 12px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -67,9 +67,10 @@
                 inset 3px 3px 0px 0px #ff8585;
         }
         #leftBtn { left: 20px; bottom: 40px; }
-        #rightBtn { left: 130px; bottom: 40px; }
-        #jumpBtn { right: 130px; bottom: 40px; }
-        #fireBtn { right: 20px; bottom: 40px; }
+        #rightBtn { left: 110px; bottom: 40px; }
+        #jumpBtn { right: 20px; bottom: 40px; }
+        #fireBtn { right: 20px; bottom: 120px; }
+        #downBtn { right: 20px; bottom: 120px; display: none; }
         @media (max-width: 768px) {
             #mobileControls {
                 display: block;
@@ -84,6 +85,7 @@
         <div id="rightBtn" class="control-btn">→</div>
         <div id="jumpBtn" class="control-btn">↑</div>
         <div id="fireBtn" class="control-btn">F</div>
+        <div id="downBtn" class="control-btn">↓</div>
     </div>
     <script>
         // Constants
@@ -547,7 +549,8 @@
             left: false,
             right: false,
             jump: false,
-            fire: false
+            fire: false,
+            down: false
         };
 
         // Keyboard controls
@@ -590,6 +593,7 @@
             setupButton(leftBtn, 'left');
             setupButton(rightBtn, 'right');
             setupButton(jumpBtn, 'jump');
+            setupButton(downBtn, 'down');
             
             // Special handling for fire button
             fireBtn.addEventListener('touchstart', (e) => {
@@ -597,6 +601,23 @@
                 const fireball = player.shootFireball();
                 if (fireball) level.fireballs.push(fireball);
             });
+
+            // Update button visibility based on powers
+            function updateButtonVisibility() {
+                const fireBtn = document.getElementById('fireBtn');
+                const downBtn = document.getElementById('downBtn');
+                
+                if (player.hasFlight && player.flightTimer > 0) {
+                    fireBtn.style.display = 'none';
+                    downBtn.style.display = 'flex';
+                } else {
+                    downBtn.style.display = 'none';
+                    fireBtn.style.display = player.hasFireball ? 'flex' : 'none';
+                }
+            }
+
+            // Call initially and set up interval
+            setInterval(updateButtonVisibility, 100);
         }
 
         setupTouchControls();
@@ -624,9 +645,9 @@
             }
             // Handle flight movement
             if (player.hasFlight && player.flightTimer > 0) {
-                if (keys[' '] || keys['ArrowUp']) {
+                if (keys[' '] || keys['ArrowUp'] || touchControls.jump) {
                     player.velocityY = -MOVEMENT_SPEED;
-                } else if (keys['Shift'] || keys['ArrowDown']) {
+                } else if (keys['Shift'] || keys['ArrowDown'] || touchControls.down) {
                     player.velocityY = MOVEMENT_SPEED;
                 } else {
                     player.velocityY = 0; // Hover when no key is pressed
