--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                 ctx.font = '24px Arial';
                 ctx.fillText(`Final Score: ${Math.floor(score)}`, SCREEN_WIDTH/2, SCREEN_HEIGHT/2 + 40);
                 ctx.font = '20px Arial';
-                ctx.fillText('Press Ctrl + R to Restart!', SCREEN_WIDTH/2, SCREEN_HEIGHT/2 + 80);
+                ctx.fillText('Reload the page to Restart!', SCREEN_WIDTH/2, SCREEN_HEIGHT/2 + 80);
                 return;
             }
 
